Fix display overlapping bug

--- a/css/criticism.css
+++ b/css/criticism.css
@@ -24,6 +24,8 @@ h2 {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+    z-index: 1;
 }
 
 .criticism-form form {
